// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row /> renders with default styles 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -15px;
  margin-right: -15px;
}

<div
  className="emotion-0"
/>
`;

exports[`<Row /> renders with no gutters when given a prop 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0;
  margin-right: 0;
}

<div
  className="emotion-0"
/>
`;
